[package]
name = "command-executor-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = "0.3"
async-process = "1.5"
shell-words = "1.1"
regex = "1"
lazy_static = "1"
base64 = "0.13"
